--- a/index.html
+++ b/index.html
@@ -1,2 +1,12 @@
 <!DOCTYPE html>
-rteetryetry
+<html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE-edge">
+        <meta name="viewport" content="width=devide-width, initial-scale=1.0">
+        <title>Prima pagina HTML</title>
+    </head>
+    <body>
+        <h1>Hello World!</h1>
+    </body>
+</html>
